--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li class="sl_news"><a rel="slider_news" href="#">Новости фестиваля</a></li>
       <li class="sl_user"><a rel="slider_user" href="#">Участники</a></li>
-      <li class="sl_fest"><a rel="slider_fest" href="#">О фестивале</a></li>
+      <li class="sl_fest"><a class="active" rel="slider_fest" href="#">О фестивале</a></li>
       <li class="sl_org"><a rel="slider_org" href="#">Оргкомитет</a></li>
     </ul>
   </div>
@@ -94,7 +94,7 @@
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
   </div>
-  <div id="slider_fest" class="slider">
+  <div id="slider_fest" class="slider" style="z-index:20">
     <div class="slides_container">
       <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
 					<div class="slide_text">
@@ -118,6 +118,8 @@
           </div>
       </div>
     </div> 
+    <a href="" class="next">Вперед</a>
+    <a href="" class="prev">Назад</a>
   </div>
   <div id="slider_org" class="slider">
       <div class="slides_container">
@@ -126,7 +128,7 @@
               <div class="slide_text">
                 
               </div>
-  		</div>
+  	     	</div>
       </div>
   </div>
 </div>
