--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
     <strong><%= @article.author.name %>. <%= Russian::strftime(@article.created_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
       <div class="thumb">
-        <img alt="" src="/assets/samp/post_samp_prev.jpg" style="background-image: url('/assets/samp/post_samp_prev.jpg');">
+        <%= image_tag @article.picture.url(:medium) %>
       </div>
       <div class="short_desc">
         <%= @article.short_description %>
