--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -5,7 +5,7 @@
     <strong><%= @interview.author.name %>. <%= Russian::strftime(@interview.created_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
       <div class="thumb">
-        <img alt="" src="/assets/samp/post_samp_prev.jpg" style="background-image: url('/assets/samp/post_samp_prev.jpg');">
+        <%= image_tag @interview.picture.url(:medium) %>
       </div>
       <div class="short_desc">
         <%= @interview.short_description %>
