--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -64,7 +64,7 @@
           <div class="mask"></div>
           <ul id="pikame" class="jcarousel-skin-pika">
             <% @activity.photos.each do |photo| %>
-              <li><%= link_to image_tag(photo.attach.url), '#' %></li>
+              <li><%= link_to image_tag(photo.attach(:slider).url), '#' %></li>
             <% end %>
           </ul>
         </div>
