--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -37,11 +37,42 @@
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
   </div>
-  <div id="slider_fest" class="slider">
-
+  <div id="slider_fest" class="slider" style="z-index:20">
+    <div class="slides_container">
+      <div class="slide" style="background:url(/assets/samp/slide_2.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_4.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+      <div class="slide" style="background:url(/assets/samp/slide_1.jpg) no-repeat 0 top; height:395px">
+					<div class="slide_text">
+         		<div style="float:left; padding-right:50px; padding-top:140px">
+          	Ежегодный международный фестиваль, <br />объединяющий лучшие культурные и <br />образовательные проекты для детей!
+            </div>
+          </div>
+      </div>
+    </div> 
+    <a href="" class="next">Вперед</a>
+    <a href="" class="prev">Назад</a>
   </div>
   <div id="slider_org" class="slider">
-
+      <div class="slides_container">
+          <div class="slide" style="background:url(/assets/samp/slide_org.jpg) no-repeat 0 top; height:395px">
+  
+              <div class="slide_text">
+                
+              </div>
+  	     	</div>
+      </div>
   </div>
 </div>
 <div class="main_content">
