--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -61,14 +61,18 @@
 
         <div class="right_part">
         <div class="pikachoose">
-          <div class="mask"></div>
-          <ul id="pikame" class="jcarousel-skin-pika">
-            <% @activity.photos.each do |photo| %>
-              <li><%= link_to image_tag(photo.attach.url(:slider)), '#' %></li>
-            <% end %>
-          </ul>
+	  <% if @activity.photos.count == 1 %>
+	    <div class="mask"></div>
+	    <%= link_to image_tag(@activity.photos.last.attach.url(:slider)), '#' %>
+	  <% elsif  @activity.photos.count > 1 %>
+	    <div class="mask"></div>
+            <ul id="pikame" class="jcarousel-skin-pika">
+              <% @activity.photos.each do |photo| %>
+		<li><%= link_to image_tag(photo.attach.url(:slider)), '#' %></li>
+              <% end %>
+            </ul>
+	  <% end %>
         </div>
-
         <script language="javascript">
           $(document).ready(
           function (){
