display real experts count on experts list page

--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <div class="expert_title">
     <h1>Экспертный совет ярких людей</h1>
-     12 ярких людей современной России оценивают Москву для детей
+     <%= Expert.count %> ярких людей современной России оценивают Москву для детей
   </div>
   
   <div class="expert_list_wrapper">
