--- a/app/views/home/_council.html.erb
+++ b/app/views/home/_council.html.erb
@@ -27,7 +27,11 @@
     <input class="hidden" type="radio" name="slider" id="slide3" />
     <input class="hidden" type="radio" name="slider" id="slide4" />
     <input class="hidden" type="radio" name="slider" id="slide5" />
-
+    <input class="hidden" type="radio" name="slider" id="slide6" />
+    <input class="hidden" type="radio" name="slider" id="slide7" />
+    <input class="hidden" type="radio" name="slider" id="slide8" />
+    <input class="hidden" type="radio" name="slider" id="slide9" />
+    <input class="hidden" type="radio" name="slider" id="slide10" />
     <!-- The Slider -->
 
     <div id="slides">
@@ -61,6 +65,11 @@
       <label for="slide3"></label>
       <label for="slide4"></label>
       <label for="slide5"></label>
+      <label for="slide6"></label>
+      <label for="slide7"></label>
+      <label for="slide8"></label>
+      <label for="slide9"></label>
+      <label for="slide10"></label>
     </div> <!-- #controls -->
 
     <div id="active" class="hidden">
@@ -69,6 +78,11 @@
       <label for="slide3"></label>
       <label for="slide4"></label>
       <label for="slide5"></label>
+      <label for="slide6"></label>
+      <label for="slide7"></label>
+      <label for="slide8"></label>
+      <label for="slide9"></label>
+      <label for="slide10"></label>
     </div> <!-- #active -->
   </div>
   <div class="clear"></div>
