--- a/app/assets/stylesheets/council_slider.css.scss
+++ b/app/assets/stylesheets/council_slider.css.scss
@@ -3,6 +3,11 @@
 #slide3:checked ~ #slides .inner { margin-left:-200%; }
 #slide4:checked ~ #slides .inner { margin-left:-300%; }
 #slide5:checked ~ #slides .inner { margin-left:-400%; }
+#slide6:checked ~ #slides .inner { margin-left:-500%; }
+#slide7:checked ~ #slides .inner { margin-left:-600%; }
+#slide8:checked ~ #slides .inner { margin-left:-700%; }
+#slide9:checked ~ #slides .inner { margin-left:-800%; }
+#slide10:checked ~ #slides .inner { margin-left:-900%; }
  
 #slides { padding:5% 0 20px}
 
@@ -22,11 +27,11 @@ article a.thumb { position:relative; overflow:hidden; -moz-border-radius:0 0 40p
 article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 
 #slides .inner {
-        width: 500%;
+        width: 1000%;
 }
 
 #slides article {
-        width: 20%;
+        width: 10%;
         float: left;
         text-align:center;
 }
