--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
       <div class="left column">
         <div class="gen_sponsor">
           <span>Генеральный спонсор</span>
-          <a href=""><img src="/assets/footer_bank_bg.jpg" alt="" /></a>
+          <a href=""><img src="/assets/footer_bank_bg.png" alt="" /></a>
         </div>
         <div class="gen_organizator">
           <span>Организатор фестиваля</span>
