--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
       <div class="left column">
         <div class="gen_sponsor">
           <span>Генеральный спонсор</span>
-          <a href=""><img src="/assets/footer_bank_bg.png" alt="" /></a>
+          <a href="http://mkb.ru/"><img src="/assets/footer_bank_bg.png" alt="" /></a>
         </div>
         <div class="gen_organizator">
           <span>Организатор фестиваля</span>
@@ -34,7 +34,7 @@
       <div class="right column">
         <div class="gen_sponsor">
           <span>При поддержке<br />Правительства Москвы</span>
-          <a href=""><img src="/assets/moscow_logo.png" alt="" /></a>
+          <a href="http://mos.ru/"><img src="/assets/moscow_logo.png" alt="" /></a>
         </div>
       </div>
       <div class="clear"></div>
