--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="right_bg"></div>
   <div class="wrapper">
     <div class="header_left_text">Генеральный спонсор&nbsp;&nbsp;&nbsp;<br />&laquo;Ярких людей 2012&raquo;</div>
-    <div class="header_mkb"><a href=""><img src="/assets/header_bank_bg.png" alt="" /></a></div>
+    <div class="header_mkb"><a href="http://mkb.ru/"><img src="/assets/header_bank_bg.png" alt="" /></a></div>
     <div class="header_right_text">Нам 20 лет</div>
   </div>
 </div>
@@ -32,7 +32,7 @@
     </div>
 
   </div>
-  <div class="logo"><a href=""><img src="/assets/logo.png" alt="" /></a></div>
+  <div class="logo"><a href="/"><img src="/assets/logo.png" alt="" /></a></div>
 
   <div class="clear"></div>
 </div>
