fix main page subscribe and color line

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,6 @@
+<div class="color_line_left">
+<div class="color_line_right">
+
 <div class="header_line">
   <div class="left_bg"></div>
   <div class="right_bg"></div>
@@ -37,6 +40,8 @@
   <div class="clear"></div>
 </div>
 
+
+
 <div class="menu_bg">
   <div id="menu">
     <ul class="">
@@ -58,4 +63,7 @@
       <li><%= link_to 'Спецпроект', special_projects_path %></li>
     </ul>
   </div>
+</div>
+
+</div>    
 </div>
