--- a/app/views/home/_activities.html.erb
+++ b/app/views/home/_activities.html.erb
@@ -1,4 +1,4 @@
-<div class="">
+<div style="padding:20px;">
   <div class="moscow_agencies">
     <div class="title">Детские учреждения Москвы
       <%= link_to 'Образовательные', activities_path(kind: 'educational'), class: 'title_link globe' %>
