--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :body do %>
+  <body#main_page>
+<% end %>
+
 <% content_for :before_center do %>
   <%= render 'slider' %>
 <% end %>
