--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <%== yield(:body).present? ? yield(:body) : '<body>' %>
     <div id="wrapper">
       <div id="header">
         <%= render partial: 'shared/header' %>
