some editors improvements

--- a/app/views/admin/interviews/_form.html.erb
+++ b/app/views/admin/interviews/_form.html.erb
@@ -8,7 +8,7 @@
     <div id="wysihtml5-toolbar-interview-short" style="display: none;">
       <a data-wysihtml5-command="bold">bold</a>
       <a data-wysihtml5-command="italic">italic</a>
-      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="div">question</a>
+      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h4">question</a>
       <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
       <a data-wysihtml5-command="insertImage">insert image</a>
       <div data-wysihtml5-dialog="insertImage" style="display: none;">
@@ -31,7 +31,7 @@
     <div id="wysihtml5-toolbar-interview" style="display: none;">
       <a data-wysihtml5-command="bold">bold</a>
       <a data-wysihtml5-command="italic">italic</a>
-      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="div">question</a>
+      <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h4">question</a>
       <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
       <a data-wysihtml5-command="insertImage">insert image</a>
       <div data-wysihtml5-dialog="insertImage" style="display: none;">
