--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag @interview.picture.url(:medium) %>
       </div>
       <div class="short_desc">
-        <%= @interview.short_description %>
+        <%=raw @interview.short_description %>
       </div>
       <div class="clear"></div>
     </div>
