--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -115,7 +115,7 @@ $(function(){
 	_date.setMinutes(0);
 	_date.setSeconds(0);
 	$('#counter').countdown({
-		image: 'images/counter.png',
+		image: '/assets/counter.png',
 		startTime: _date
 	});
 });
