--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -28,8 +28,10 @@
           <strong>Показывать только материалы по следующим темам:</strong>
           <ul>
             <% @categories.each do |category| %>
-            <li>
-              <input type="checkbox" id="category_<%= category.id %>_checkbox" />
+            <li class="articles_category">
+              <input type="checkbox"
+                     id="category_<%= category.id %>_checkbox"
+                     data-id="<%= category.id %>"/>
               <span class="sim_check"></span>
               <label for="category_<%= category.id %>_checkbox">
                 <%= category.title %>
@@ -66,27 +68,11 @@
   
   <div class="common">
     <div class="articles_container">
-    <% @articles.each do |article| %>
-      <div class="preview_cell">
-        <div class="info">
-          <div class="cat_name">
-            <span><%= article.category.title %></span>
-          </div>
-          <div class="thumb">
-            <%= link_to image_tag(article.picture), article %>
-          </div>
-          <div class="name">
-            <%= link_to article.title, article %>
-          </div>
-          <div class="date">
-            <%= article.created_at.to_s(:main) %>
-          </div>
-        </div>
-      </div>
-    <% end %>
+      <%= render 'articles_list', articles: @articles %>
     </div>
     <%= paginate @articles %>
     <div class="clear"></div>
+    
   </div>
   
 </div>
