fix comment loader

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -320,7 +320,7 @@ span.sim_check.active { background-position:0px 0px; }
 .detail_page .mark { background:url(/assets/page_fest_user.png) no-repeat; width:174px; height:23px; display:inline-block; line-height:23px; color:#fff; font-size:12px; text-align:center; margin-top:8px; margin-left:10px;}
 
 .detail_page .age_block span.name { color:#7b571c; font-weight:bold;}
-.detail_page .age_block span.age { color:#d6130b; font-size:24px; letter-spacing:-1px; display:block; font-weight:bold; padding-top:5px}
+.detail_page .age_block span.age { color:#d6130b; font-size:20px; letter-spacing:-1px; display:block; font-weight:bold; padding-top:5px}
 
 .detail_page .rating_block span.name { color:#7b571c; font-weight:bold;}
 
@@ -376,6 +376,8 @@ span.sim_check.active { background-position:0px 0px; }
 .comment .info .name { padding-left:30px; font-weight:bold; color:#707070; padding-bottom:5px}
 .comment .info .quote { background:url(/assets/quote.png) no-repeat 0px 5px; padding-left:30px}
 
+
+.comment .loading { background:url(/assets/preloader.png) no-repeat 145px 0px; height:30px;}
 
 .comment .more_comment { padding-left:145px }
 .comment .more_comment a { background:url(/assets/more_button.png); width:208px; height:33px; color:#fff; text-align:center; display:block; font-size:14px; text-shadow:1px 1px #ccc; text-decoration:none; line-height:33px}
