display approvals count only if non-zero

--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -9,7 +9,9 @@
       
     <% @experts.each do |expert| %>
       <div class="exp_preview">
+        <% if expert.approvals_count != 0 %>
         <span class="mark"><%= expert.approvals_count %></span>
+        <% end %>
         <div class="thumb">
           <%= link_to image_tag(expert.avatar), expert_path(expert) %>
         </div>
