--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -1,8 +1,5 @@
 <div class="pages">
-  <div class="expert_title">
-    <h1>Экспертный совет ярких людей</h1>
-     <%= Role.expert.users.count %> ярких людей современной России оценивают Москву для детей
-  </div>
+  <%= render 'title' %>
   
   <div class="expert_list_wrapper">
     <div class="expert_list">
