--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -28,10 +28,7 @@
     <% end %>
   </div>
   
-  <div class="expert_title">
-    <h1>Экспертный совет ярких людей</h1>
-     12 ярких людей современной России оценивают Москву для детей
-  </div>
+  <%= render 'title' %>
   
   <div class="expert_big_info">
     <div class="name"><%= @expert.name %></div>
@@ -53,104 +50,6 @@
       <%= render 'post_share' %>
     </div>
     
-    <div class="right_part">
-      <div class="dop_title">
-        Активность на нашем сайте
-      </div>
-      <div class="post_category_menu">
-        <ul>
-          <li class="">
-            <a href="">
-              <span class="count"><%= @expert.approvals_count %></span>
-              Кружки
-            </a>
-          </li>
-          
-          <li class="active">
-            <a href="">
-              <span class="count"><%= @expert.expert_mentions %></span>
-              Упоминания
-            </a>
-          </li>
-        </ul>
-        <div class="clear"></div>
-      </div>
-      
-      
-      
-      <div class="catalog">
-        <div class="preview_catalog">
-          <div class="thumb">
-            <a href=""><img src="samp/catalog.jpg" alt="" /></a>
-          </div>
-          <div class="info">
-            <div class="mark">
-              <span class="arrow"></span>Участник фестиваля-2012!
-            </div>
-            <div class="name">
-              <a href="">Музей занимательных наук и практик "Экспериментаниум"</a>
-            </div>
-             Детям 1—16 лет<br />
-             Учреждение: Мультиспорт
-            <div class="rating">
-            </div>
-          </div>
-        </div>
-        
-        <div class="preview_catalog">
-          <div class="thumb">
-            <a href=""><img src="samp/catalog.jpg" alt="" /></a>
-          </div>
-          <div class="info">
-            <div class="mark">
-              <span class="arrow"></span>Участник фестиваля-2012!
-            </div>
-            <div class="name">
-              <a href="">Музей занимательных наук и практик "Экспериментаниум"</a>
-            </div>
-             Детям 1—16 лет<br />
-             Учреждение: Мультиспорт
-            <div class="rating">
-            </div>
-          </div>
-        </div>
-        
-        <div class="preview_catalog">
-          <div class="thumb">
-            <a href=""><img src="samp/catalog.jpg" alt="" /></a>
-          </div>
-          <div class="info">
-            <div class="name">
-              <a href="">Музей занимательных наук и практик "Экспериментаниум"</a>
-            </div>
-             Детям 1—16 лет<br />
-             Учреждение: Мультиспорт
-            <div class="rating">
-            </div>
-          </div>
-        </div>
-        
-        <div class="preview_catalog">
-          <div class="thumb">
-            <a href=""><img src="samp/catalog.jpg" alt="" /></a>
-          </div>
-          <div class="info">
-            <div class="mark">
-              <span class="arrow"></span>Участник фестиваля-2012!
-            </div>
-            <div class="name">
-              <a href="">Музей занимательных наук и практик "Экспериментаниум"</a>
-            </div>
-             Детям 1—16 лет<br />
-             Учреждение: Мультиспорт
-            <div class="rating">
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      
-    </div>
-    <div class="clear"></div>
+    <%= render 'site_activity', :expert => @expert %>
   </div>
 </div>
